# i3wmIPC

./: .gitignore  CMakeLists.txt  README.md  download_prerequisites.sh
src/: main.cpp
